# data-science-project

./: .copierignore  .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  README.md  copier-helper.sh  copier.yml  index.html  justfile  mkdocs.yml  pyproject.toml  sitemap.xml  tox.ini
.devcontainer/: devcontainer.json  postCreateCommand.sh
.github/workflows/: ci.yml  container-tests.yml  devcontainer-e2e.yml
copier/: copier.yml
copier/template/: Justfile.jinja  README.md.jinja  {% if open_source_license != 'Not open source' %}LICENSE{% endif %}.jinja  {% if python == 'y' %}.pre-commit-config.yaml{% endif %}.jinja
docs/: index.md  promp_arguments.md  tutorial.md  usage.md
options/: index.html
promp_arguments/: index.html
search/: search_index.json
template/: .gitignore.jinja  CONTRIBUTING.md.jinja  Justfile.jinja  {% if python %}.pre-commit-config.yaml{% endif %}.jinja  {% if python %}pyproject.toml{% endif %}.jinja  {% if python == 'y' %}pyproject.toml{% endif %}.jinja  {% if python_package %}mkdocs.yml{% endif %}.jinja  {% if r_data_science %}.Rprofile{% endif %}
template/.devcontainer/: checkREnvironment.sh.jinja  devcontainer.json.jinja  postCreateCommand.ps1.jinja  postCreateCommand.sh.jinja  setupShellAliases.sh  {% if r_data_science %}checkREnvironment.ps1{% endif %}.jinja  {% if r_data_science %}checkREnvironment.sh{% endif %}.jinja
template/{% if python %}{{ project_slug }}{% endif %}/: __init__.py.jinja
tests/: test_devcontainer_container.py  test_devcontainer_e2e.py  test_template.py
tutorial/: index.html
usage/: index.html
(+26 files in other folders)
